[Mac][Material Design] Restore bookmark icons to default favicon.

The Material Design bookmark buttons incorrectly used the
location_bar_http vector icon to display a document icon for the
default favicon. This cl adds default favicon vector icons based on the
original version of the location_bar_http vector, and changes the
bookmark buttons to use them.

R=avi@chromium.org, estade@chromium.org
BUG=614539

Review-Url: https://codereview.chromium.org/2009643003
Cr-Commit-Position: refs/heads/master@{#396020}

Former-commit-id: a0776f8a55b798c81fc142ea531c9d8a762c2c85